# orion-ai

./: .gitignore  Cargo.toml  README.md
_gal/: adm.gxl  ai-roles.yml  ai-test.sh  ai.yml  work.gxl
_gal/ai-rules/developer/: git.mdc
_gal/ai-rules/diagnostician/: monitoring.mdc
_gal/ai-rules/galactiward/: gxl.mdc
docs/: AIEXECUNIT_BUILDER_DIAGNOSTIC_SUPPORT.md  API.md  ARCHITECTURE.md  DIAGNOSTIC_API.md  MONITORING_DESIGN_DECISIONS.md  README.md  SYSTEM_DIAGNOSIS_DEVELOPMENT.md  TOOLS.md  api_usage.md  code_structure.md  module_relationships.md
examples/: ai-roles.yml  git_workflow_example.rs  request.json  response.json  sys-diagnose.rs  sys-diagnostics.md  txt.json
src/: const_val.rs  error.rs  factory.rs  infra.rs  lib.rs  provider.rs  roleid.rs  router.rs
src/client/: builder.rs  core.rs  mod.rs  tests.rs  trais.rs
src/config/: loader.rs  mod.rs  structures.rs  tests.rs  traits.rs  utils.rs
src/config/roles/: loader.rs  manager.rs  mod.rs  types.rs
src/exec_unit/: builder.rs  diagnosis.rs  mod.rs  unit.rs
src/exec_unit/parsers/: mod.rs  network.rs  process.rs
src/func/: SYSTEM_COMMANDS.md  executor.rs  git.rs  global.rs  mod.rs  registry.rs
src/func/system/: analysis.rs  diagnosis.rs  (+6 more)
src/providers/: mock.rs  mod.rs  openai.rs  resp.rs
src/thread/: mod.rs
src/types/: diagnosis.rs  mod.rs  result.rs
tasks/: 2025-09-10_1_sys-diagnosis-tool-development.md
tests/: function_calling_test.rs  function_registration_integration.rs  openai_format_test.rs  openai_response_converter_test.rs  registration_performance.rs  thread_integration_test.rs
(+4 files in other folders)
