[package]
name = "orion-ai"
version = "0.1.0"
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
orion-error = "~0.5"
orion_conf = "~0.1"
orion_infra = { git = "https://github.com/galaxy-sec/orion-infra.git", tag = "v0.3.1" }
orion_variate = { git = "https://github.com/galaxy-sec/orion-variate.git", tag = "v0.9.0" }
orion-sec = { git = "https://github.com/galaxy-sec/orion-sec.git", branch = "main" }

getset = "0.1.6"
fs_extra = "1.3"
unicase = "~2.8"
home = "0.5"
thiserror = "~2.0"
lazy_static = "~1.5"
chrono = "0.4.41"
log = "~0.4"
scopeguard = "1.2.0"

mockall = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shells = "0.2"
toml = "0.9"
url = "2.5"
anyhow = "1.0.82"
walkdir = "2.5"
wildmatch = "~2.4"
dirs = "6.0"
indexmap = "2.10"
derive_more = { version = "2.0", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12.11", features = ["json"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "~1.47", features = ["full"] }
serde_yaml = "0.9"
contracts = "0.6"
libc = "0.2.174"
once_cell = "1.21"


[dev-dependencies]
rstest = "0.26"
tempfile = "3.10"
env_logger = "*"
